Fix modal staying open when screen is rotated on mobile

--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -42,14 +42,17 @@ body {
 }
 
 @media only screen and (orientation:landscape) and (max-height: 480px) {
-  .rotation-lock{
+  .rotation-lock {
     display: flex !important;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
   }
-  .main, .navbar {
+  .main,
+  .navbar,
+  .sign-in,
+  .request-invite {
     display: none !important;
   }
 }
